dnl Process this file with autoconf to produce a configure script.

AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(touvsh, 3.0)


dnl vérifier que Automake est bien complet
AM_SANITY_CHECK

dnl vérifier la présence de certain programme
AC_PROG_INSTALL
AC_PROG_LN_S

dnl liste des fichiers à générer
AC_OUTPUT(Makefile src/Makefile)

