## Process this file with Automake to produce Makefile.in

bin_SCRIPTS = archivage \
			  cherche \
			  copie \
			  cvs2CVS \
			  mozilla-mail \
			  renomme \
			  rsed \
			  samba-mount \
			  supprime \
			  treeview \
			  untgz \
			  vignettes \
			  wget-images \
			  notes \
			  proxy

man_MANS = supprime.8 \
		   rsed.8 \
		   treeview.8

EXTRA_DIST = $(bin_SCRIPTS) $(man_MANS)

